apps/smart-home/mosquitto/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: mosquitto
  labels:
    app: mosquitto
spec:
  ports:
    - port: 1883
      targetPort: 1883
      protocol: TCP
      name: mqtt
    - port: 8883
      targetPort: 8883
      protocol: TCP
      name: mqtts
  selector:
    name: mosquitto
