apps/smart-home/mosquitto/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto
  namespace: mosquitto
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: internal
    haproxy.org/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
        - mqtt.private.channings.me
        - mqttws.private.channings.me
      secretName: mosquitto-tls
  rules:
    - host: mqtt.private.channings.me
      http:
        paths:
          - path: /
            backend:
              serviceName: mosquitto
              servicePort: mqtts
    - host: mqttws.private.channings.me
      http:
        paths:
          - path: /
            backend:
              serviceName: mosquitto
              servicePort: wss
